fix Fixture, Table, Registration, Round, Club, Fixture