@@ -6,7 +6,6 @@ import javafx.fxml.FXML;
 import javafx.scene.control.Label;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
-import javafx.scene.layout.BorderPane;
 import javafx.scene.shape.Rectangle;
 import javafx.scene.web.WebView;
 import javafx.scene.web.WebEngine;
@@ -17,17 +16,16 @@ import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.util.Objects;
+
 import org.json.JSONArray;
 import org.json.JSONObject;
 public class ClubsDetailController {
 
-    @FXML private BorderPane mainContainer;
-
     // Club information
     @FXML private ImageView clubLogoImageView;
     @FXML private Label clubNameLabel;
-    @FXML private Label clubEstablishedLabel;
-    @FXML private Label clubNicknameLabel;
     @FXML private Label clubIdLabel;
     @FXML private Label countryLabel;
     @FXML private Label websiteLabel;
@@ -59,65 +57,51 @@ public class ClubsDetailController {
 
         // Kiểm tra và thiết lập thông tin cơ bản của CLB
         if (clubIdLabel != null) clubIdLabel.setText(String.valueOf(club.getMaCLB()));
-        else System.out.println("clubIdLabel is null");
 
         if (clubNameLabel != null) clubNameLabel.setText(club.getTenCLB().toUpperCase());
-        else System.out.println("clubNameLabel is null");
 
         if (countryLabel != null) countryLabel.setText("Việt Nam");
-        else System.out.println("countryLabel is null");
 
         if (websiteLabel != null) websiteLabel.setText(club.getEmail());
-        else System.out.println("websiteLabel is null");
 
         if (colorLabel != null) colorLabel.setText("Đỏ");
-        else System.out.println("colorLabel is null");
 
         if (coachLabel != null) coachLabel.setText(club.getTenHLV());
-        else System.out.println("coachLabel is null");
 
         if (leagueLabel != null) leagueLabel.setText("V-League");
-        else System.out.println("leagueLabel is null");
 
         // Load club logo
         loadClubLogo();
     }
 
     private void displayStadiumData() {
-        System.out.println("Displaying stadium data for: " + stadium.getTenSan());
 
         // Kiểm tra và thiết lập thông tin sân vận động
         if (stadiumIdLabel != null) stadiumIdLabel.setText(String.valueOf(stadium.getMaSan()));
-        else System.out.println("stadiumIdLabel is null");
 
         if (stadiumNameLabel != null) stadiumNameLabel.setText(stadium.getTenSan());
-        else System.out.println("stadiumNameLabel is null");
 
         if (addressLabel != null) addressLabel.setText(stadium.getDiaChi());
-        else System.out.println("addressLabel is null");
 
         if (capacityLabel != null) capacityLabel.setText(String.format("%,d người", stadium.getSucChua()));
-        else System.out.println("capacityLabel is null");
 
         // Thiết lập thanh sức chứa dựa trên phần trăm (giả sử 100,000 là sức chứa tối đa)
         double maxCapacity = 100000.0;
         double percentage = stadium.getSucChua() / maxCapacity;
 
         if (capacityBar != null) capacityBar.setWidth(400.0 * percentage);
-        else System.out.println("capacityBar is null");
 
         if (capacityPercentLabel != null) capacityPercentLabel.setText(String.format("%.0f%%", percentage * 100));
-        else System.out.println("capacityPercentLabel is null");
     }
 
     private void loadClubLogo() {
         try {
             // Try to load from resources
             String logoPath = "/Image/ClubLogo/" + club.getLogoCLB();
-            Image logoImage = null;
+            Image logoImage;
 
             try {
-                logoImage = new Image(getClass().getResourceAsStream(logoPath));
+                logoImage = new Image(Objects.requireNonNull(getClass().getResourceAsStream(logoPath)));
             } catch (Exception e) {
                 // If not found in resources, try to load from file system
                 File logoFile = new File("Image/ClubLogo/" + club.getLogoCLB());
@@ -125,11 +109,11 @@ public class ClubsDetailController {
                     logoImage = new Image(logoFile.toURI().toString());
                 } else {
                     // If still not found, use a placeholder
-                    logoImage = new Image(getClass().getResourceAsStream("/Image/placeholder_logo.png"));
+                    logoImage = new Image(Objects.requireNonNull(getClass().getResourceAsStream("/Image/placeholder_logo.png")));
                 }
             }
 
-            if (logoImage != null && !logoImage.isError()) {
+            if (!logoImage.isError()) {
                 clubLogoImageView.setImage(logoImage);
             }
         } catch (Exception e) {
@@ -184,7 +168,7 @@ public class ClubsDetailController {
     private double[] getCoordinatesFromAddress(String address) {
         try {
             // Encode địa chỉ
-            String encodedAddress = URLEncoder.encode(address, "UTF-8");
+            String encodedAddress = URLEncoder.encode(address, StandardCharsets.UTF_8);
 
             // Tạo URL cho Nominatim API
             URL url = new URL("https://nominatim.openstreetmap.org/search?format=json&q=" + encodedAddress);
@@ -206,7 +190,7 @@ public class ClubsDetailController {
 
             // Parse JSON
             JSONArray results = new JSONArray(response.toString());
-            if (results.length() > 0) {
+            if (!results.isEmpty()) {
                 JSONObject result = results.getJSONObject(0);
                 double lat = result.getDouble("lat");
                 double lon = result.getDouble("lon");
